# chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  board.c  chess.xcf  main.c  makefile  move.c
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/: algebraic_notation.h  board.h  move.h  render.h  vector.h
src/: algebraic_notation.c  board.c  main.c  move.c  render.c  vector.c
